# RadioactiveDecaySimulation

./: CMakeLists.txt  Cf238.mac  Co60.mac  GNUmakefile  Gd158.mac  No252.mac  Po212.mac  README.md  Ra228.mac  RadioactiveDecaySimulation.cc  alpha.mac  atomicDeexcitation.mac  debug.mac  electronicCapture.mac  fullChain.mac  neutron.mac  plotHisto.C  proton.mac  singleDecay.mac  timeWindow.mac  timeWindowBiased.mac
include/: DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh  TrackingAction.hh  TrackingMessenger.hh
references/: beta+.mac  beta-.mac  ecapt.mac  it1.mac  it2.mac  it3.mac
references/9.6/: alpha.out  beta+.out  beta-.out  ecapt.out  it1.out  it2.out  it3.out
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  HistoManager.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  TrackingAction.cc  TrackingMessenger.cc
